Added file upload page, fixed navbar, confed Foundation to give me special js on special sites.

--- a/config.yml
+++ b/config.yml
@@ -55,4 +55,5 @@ PATHS:
     - "bower_components/foundation-sites/js/foundation.tooltip.js"
     # Paths to your own project code are here
     - "src/assets/js/!(app).js"
+    - "!src/assets/js/upload-file/**/*"
     - "src/assets/js/app.js"
