--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "foundation-zurb-template",
+  "name": "Gradr2016",
   "version": "1.0.0",
-  "description": "Official ZURB Template for Foundation for Sites.",
+  "description": "Gradr",
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp",
@@ -45,11 +45,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/zurb/foundation-zurb-template.git"
+    "url": "https://github.com/theDisain/Gradr.git"
   },
   "bugs": {
     "url": "https://github.com/zurb/foundation-sites/issues",
-    "email": "foundation@zurb.com"
+    "email": "Ain-Joonas.Toose@gmail.com"
   },
   "private": true
 }
